--- a/SchoolSupplyApp/SchoolSupplyApp.Web.csproj
+++ b/SchoolSupplyApp/SchoolSupplyApp.Web.csproj
@@ -198,6 +198,7 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\supplies.js" />
+    <Content Include="Scripts\viewList.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
